# UChicagoFinmath

./: README.md
advanced_c++/BackTesterDemo/: CUR-CNY2019.csv  PNL_from_c++.xlsx  README.txt
advanced_c++/BackTesterDemo/BackTesterDemo/: CMakeLists.txt  main.cpp
advanced_c++/BackTesterDemo/BackTesterDemo/BackTest/: AppBase.cpp  AppBase.h  BookBuilder.cpp  BookBuilder.h  BookUpdate.h  CMakeLists.txt  MDReader.cpp  MDReader.h  MarketSimulator.cpp  MarketSimulator.h  Order.cpp  Order.h  OrderManager.cpp  OrderManager.h  TradingStrategy.cpp  TradingStrategy.h
advanced_c++/BackTesterDemo/BackTesterDemo/Tests/: CMakeLists.txt
advanced_c++/BackTesterDemo/BackTesterDemo/Tests/tests/: CMakeLists.txt  orderbooktests.cpp
advanced_c++/BackTesterDemo/BackTesterPython/: BackTesterDemo.py
advanced_c++/OrderBookDemo/: CMakeLists.txt  main.cpp
advanced_c++/OrderBookDemo/InputFiles/: trading_arena.csv
advanced_c++/OrderBookDemo/MDParser/: CMakeLists.txt  MDReader.h
advanced_c++/OrderBookDemo/OrderBook/: BookUpdate.cpp  BookUpdate.h  MyOrderBook.cpp  MyOrderBook.h  OrderBook.cpp  PriceUpdate.h
advanced_c++/OrderBookDemo/OrderBookTests/: CMakeLists.txt
advanced_c++/OrderBookDemo/OrderBookTests/tests/: CMakeLists.txt  orderbooktests.cpp
advanced_python/matching_engine/: II.py  IV.py  IV_2.PY
pca/: homework_code.ipynb
quant_strats/finalproject-carry_trade_momentum/: F-F_Research_Data_Factors_weekly.CSV  Project_Notebook.ipynb
quant_strats/homework1/: Data.csv  README.txt  hw1_code.ipynb
quant_strats/homework2/: F-F_Research_Data_Factors_daily.CSV  README.txt  Test.ipynb  spread.csv
quant_strats/homework3/: Code.ipynb
quant_strats/homework4/: README.txt  ZACKS_FC.csv  code.py  ticker_list.csv
quant_strats/homework5/: README.txt  code.py  error_lm=0.05.csv  error_lm=0.1.csv  error_lm=0.2.csv  error_lm=0.4.csv  error_lm=0.5.csv  error_lm=1.csv  tickers.csv
quant_strats/homework6/: carrytrade.docx  tables.xlsx
quant_strats/homework6/.ipynb_checkpoints/: HW6-checkpoint.ipynb
quant_strats/homework7/: code.ipynb  tickers.csv
